Project first edit

--- a/project1/index.html
+++ b/project1/index.html
@@ -39,7 +39,7 @@ Formula https://www.geeksforgeeks.org/design-an-about-us-page-using-html-and-css
         <div class ="header inset">
             <img
             src = "" class = "img-responsive nav-logo">
-            <h2>Slot Machine</h2>
+            <h2>Come Play! The Slot Machine Game</h2>
     
         </div>
         <div class = "slots inset">
