--- a/project1/index.html
+++ b/project1/index.html
@@ -14,7 +14,6 @@
         <nav class="nav">
             <ul class="navlinks">
                 <li><a href="index.html">Play!</a></li>
-                <li><a href="#description.html">Project Description</a></li>
             </ul>
         </nav>
     </header>
@@ -43,6 +42,7 @@
                 </div>
             </div>
             <div class="footer">
+                <!-- Bet buttons moved to the footer -->
                 <button class="bet" onclick="handleBetClick()">Bet 50</button>
                 <button class="bet" onclick="handleBetClick()">Bet 100</button>
                 <button class="bet" onclick="handleBetClick()">Bet 150</button>
