--- a/project1/index.html
+++ b/project1/index.html
@@ -10,11 +10,8 @@
 
 <body>
     <header>
-        <div class="header-text">Slot Machine Nav</div>
         <nav class="nav">
-            <ul class="navlinks">
-                <li><a href="index.html">Play!</a></li>
-            </ul>
+            <!-- Your navigation content goes here -->
         </nav>
     </header>
 
@@ -22,35 +19,33 @@
         <div class="container">
             <div class="header">
                 <h2>Come Play! The Slot Machine Game</h2>
-                <div class="betting-counter">Current Bet: <span id="currentBet">0</span></div>
-                <div class="betting-values">Betting Values Used: <span id="bettingValuesUsed">0</span></div>
+                <div class="betting-info">
+                    <div class="betting-counter">Current Bet: <span id="currentBet">0</span></div>
+                    <div class="betting-values">Betting Values Used: <span id="bettingValuesUsed">0</span></div>
+                </div>
                 <div class="slots">
                     <div class="reel" id="reel1"></div>
                     <div class="reel" id="reel2"></div>
                     <div class="reel" id="reel3"></div>
                 </div>
-                <div class="outset">
-                    <button class="start" onclick="startGame()">Start</button>
+                <div class="button-container">
+                    <!-- Bet buttons -->
+                    <button class="bet" onclick="handleBetClick(50)">Bet 100</button>
+                    <button class="bet" onclick="handleBetClick(50)">Bet 150</button>
+                    <button class="bet" onclick="handleBetClick(50)">Bet 200</button>
+
+                    <!-- Start and Reset buttons -->
+                    <button id="startButton" class="start" onclick="startGame()">Start</button>
+                    <button id="resetButton" class="reset" onclick="resetGame()">Reset</button>
                 </div>
                 <div class="foot">
                     <span class="logger"></span>
                 </div>
-                <div class="reel-overlay">
-                    <a href="https://ibb.co/xJKc8hh">
-                        <a href="https://ibb.co/mFF9d4Z"><img src="https://i.ibb.co/Cssb4QC/Gamblingimages.png" alt="Gamblingimages" border="0"></a>
-                    </a>
-                </div>
-            </div>
-            <div class="footer">
-                <!-- Bet buttons moved to the footer -->
-                <button class="bet" onclick="handleBetClick()">Bet 50</button>
-                <button class="bet" onclick="handleBetClick()">Bet 100</button>
-                <button class="bet" onclick="handleBetClick()">Bet 150</button>
             </div>
         </div>
     </div>
-
-    <script src="script.js"></script>
+    <div id="debug" class="debug"></div>
+    <script src="app.js"></script>
 </body>
 
 </html>
